objects/DocumentRequirementStatus__c.object
<CustomObject>
    <description>The statuses available for a qualification document requirement.</description>
    <fields>
        <fullName>DocumentRequirementStatusEID__c</fullName>
        <description>The Enterprise ID for this document requirement status.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this document requirement status.</inlineHelpText>
        <label>Document Requirement Status EID</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalName__c</fullName>
        <description>The client-friendly term for this document requirement status.</description>
        <inlineHelpText>The client-friendly term for this document requirement status.</inlineHelpText>
        <label>External Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RankOrder__c</fullName>
        <description>The order of importance of this document requirement status.</description>
        <inlineHelpText>The order of importance of this document requirement status.</inlineHelpText>
        <label>Rank Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Requirement Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DocumentRequirementStatusEID__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Requirement Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Requirement Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>